Magick.NET.Native/MagickImage.h



MAGICK_NET_EXPORT void MagickImage_LevelColors(Image *, const PixelInfo *, const PixelInfo *, const size_t, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Levelize(Image *, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_LinearStretch(Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_LiquidRescale(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_LocalContrast(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Magnify(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT const MagickBooleanType MagickImage_Map(Image *, const Image *, const QuantizeInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Minify(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Modulate(Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT ChannelMoments *MagickImage_Moments(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Morphology(Image *, const size_t, const char *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_MotionBlur(const Image *, const double, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Negate(Image *, const MagickBooleanType, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Normalize(Image *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_OilPaint(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Opaque(Image *, const PixelInfo *, const PixelInfo *, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_OrderedDither(Image *, const char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Perceptible(Image *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT ChannelPerceptualHash *MagickImage_PerceptualHash(const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Quantize(Image *, const QuantizeInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Polaroid(Image *, const DrawInfo *, const char *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Posterize(Image *, const size_t, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_RaiseOrLower(Image *, const size_t, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_RandomThreshold(Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ReadBlob(const ImageInfo *, const unsigned char *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ReadFile(const ImageInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_ReadPixels(const size_t, const size_t, const char *, const size_t, const unsigned char *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_RemoveArtifact(Image *, const char *);


MAGICK_NET_EXPORT void MagickImage_RemoveAttribute(Image *, const char *);


MAGICK_NET_EXPORT void MagickImage_RemoveProfile(Image *, const char *);


MAGICK_NET_EXPORT void MagickImage_ResetArtifactIterator(const Image *);


MAGICK_NET_EXPORT void MagickImage_ResetAttributeIterator(const Image *);


MAGICK_NET_EXPORT void MagickImage_ResetProfileIterator(const Image *);


MAGICK_NET_EXPORT Image *MagickImage_Resample(const Image *, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Resize(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Roll(const Image *, const ssize_t, const ssize_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Rotate(const Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_RotationalBlur(Image *, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Sample(const Image *, const RectangleInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Scale(const Image *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_Segment(Image *, const size_t, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SelectiveBlur(Image *, const double, const double, const double, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Separate(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_SepiaTone(Image *, const double, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetAlpha(Image *, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetArtifact(Image *, const char *, const char *);


MAGICK_NET_EXPORT void MagickImage_SetAttribute(Image *, const char *, const char *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetBitDepth(Image *, const size_t, const size_t, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetColormap(Image *, const size_t, const PixelInfo *, ExceptionInfo **);


MAGICK_NET_EXPORT MagickBooleanType MagickImage_SetColorMetric(Image *, const Image *, ExceptionInfo **);


MAGICK_NET_EXPORT void MagickImage_SetNext(Image *, Image *);


MAGICK_NET_EXPORT void MagickImage_SetProgressDelegate(Image *, const MagickProgressMonitor);


MAGICK_NET_EXPORT Image *MagickImage_Shade(Image *, const double, const double, const MagickBooleanType, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Shadow(Image *, const ssize_t, const ssize_t, const double, const double, ExceptionInfo **);


MAGICK_NET_EXPORT Image *MagickImage_Sharpen(Image *, const double, const double, const size_t, ExceptionInfo **);